--- a/public/cibachrome/darkroom.html
+++ b/public/cibachrome/darkroom.html
@@ -1,16 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>The Darkroom | Douglas Vincent</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-  <main>
-    <h1>The Darkroom</h1>
-    <section class="page-body">
-      {{body}}
-    </section>
-  </main>
+    <meta charset="utf-8">
+    <title>The Darkroom - Douglas Vincent Photographic Arts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="origin-when-cross-origin">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Douglas Vincent, Photographic Art, Photography, Fine Art Photography, Pigment Ink Prints, Cibachrome, Ilfochrome, Portfolio">
+    <meta name="author" content="Douglas Vincent | Photographic Arts">
+    <meta http-equiv="Expires" content="30">
+    <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
+    <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
+<body id="Cibachrome">
+
+<div id="top">
+  <div id="top-inner">
+    <header id="header">
+      <input type="checkbox" id="navToggleMain">
+      <label for="navToggleMain" id="grilled-cheese">
+        <span class="bread bread-top"><span class="crust crust-top"></span></span>
+        <span class="bread bread-bottom"><span class="crust crust-bottom"></span></span>
+      </label>
+
+      <a href="/" id="logo">
+        <span id="bearclaws"></span>
+        <h2>Douglas Vincent <span>Photographic Arts</span></h2>
+      </a>
+    </header>
+
+    <nav id="nav">
+      <div class="dropdown">
+        <div class="dropclick">
+          <div class="more">
+            <input type="checkbox" class="navPortfolios" id="navTogglePortfolios">
+            <label for="navTogglePortfolios" class="navSectionToggle navPortfolios"><h3></h3></label>
+          </div>
+          <h3><a href="/portfolios/">Portfolios</a></h3>
+        </div>
+        <ul class="navSection" id="navPortfolios">
+         <li><a href="/portfolios/zion-national-park">Zion National Park</a></li>
+          <li><a href="/portfolios/zion-national-park-autumn">Zion: Autumn (I)</a></li>
+          <li><a href="/portfolios/zion-national-park-autumn-ii">Zion: Autumn (II)</a></li>
+          <li><a href="/portfolios/zion-national-park-ancient-sands">Zion: Ancient Sands</a></li>
+          <li><a href="/portfolios/zion-national-park-watercourse-way">Zion: Watercourse Way</a></li>
+          <li><a href="/portfolios/icons-of-agriculture">Icons of Agriculture (I)</a></li>
+          <li><a href="/portfolios/icons-of-agriculture-ii">Icons of Agriculture (II)</a></li>
+          <li><a href="/portfolios/icons-of-agriculture-iii">Icons of Agriculture (III)</a></li>
+          <li><a href="/portfolios/icons-of-agriculture-iv">Icons of Agriculture (IV)</a></li>
+          <li><a href="/portfolios/cloud-light">Cloud Light</a></li>
+          <li><a href="/portfolios/the-american-west">The American West (I)</a></li>
+          <li><a href="/portfolios/the-american-west-ii">The American West (II)</a></li>
+          <li><a href="/portfolios/polaroid-type-52">Polaroid Type 52</a></li>
+        </ul>
+      </div>
+
+      <div class="dropdown">
+        <div class="dropclick">
+          <div class="more">
+            <input type="checkbox" class="navCibachrome" id="navToggleCibachrome">
+            <label for="navToggleCibachrome" class="navSectionToggle navCibachrome"><h3></h3></label>
+          </div>
+          <h3><a href="/cibachrome">Cibachrome</a></h3>
+        </div>
+        <ul class="navSection" id="navCibachrome">
+          <li><a href="/cibachrome">Overview</a></li>
+          <li><a href="/cibachrome/darkroom.html">Darkroom</a></li>
+          <li><a href="/cibachrome/display-and-care.html">Display &amp; Care</a></li>
+          <li><a href="/cibachrome/history.html">History</a></li>
+        </ul>
+      </div>
+
+      <div class="dropdown">
+        <div class="dropclick">
+          <div class="more">
+            <input type="checkbox" class="navPrintsBooks" id="navTogglePrintsBooks">
+            <label for="navTogglePrintsBooks" class="navSectionToggle navPrintsBooks"><h3></h3></label>
+          </div>
+          <h3><a href="/prints-books">Prints &amp; Books</a></h3>
+        </div>
+        <ul class="navSection" id="navPrintsBooks">
+          <li><a href="/prints-books">Overview</a></li>
+          <li><a href="/prints-books/print-types.html">Print Types</a></li>
+          <li><a href="/prints-books/framing-and-display.html">Framing and Display</a></li>
+          <li><a href="/prints-books/care-and-conservation.html">Care and Conservation</a></li>
+          <li><a href="/prints-books/purchase.html">Purchase Inquiry</a></li>
+        </ul>
+      </div>
+
+      <div class="directclick">
+        <h3><a href="/writings/">Writings</a></h3>
+      </div>
+
+      <div class="dropdown right">
+        <div class="dropclick">
+          <div class="more">
+            <input type="checkbox" class="navAbout" id="navToggleAbout">
+            <label for="navToggleAbout" class="navSectionToggle navAbout"><h3></h3></label>
+          </div>
+          <h3><a href="/about">About</a></h3>
+        </div>
+        <ul class="navSection" id="navAbout">
+          <li><a href="/about">Statement</a></li>
+          <li><a href="/about/my-story.html">My Story</a></li>
+          <li><a href="/about/inspiration/">Inspiration</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+</div>
+
+<main id="main" class="solo">
+	<div class="single-column">
+  <h2>The Darkroom</h2>
+
+  <h3>Commitment</h3><p>My commitment to Cibachrome and the wet darkroom process is rooted in a passion and appreciation of the tradition of the handcrafted image. Cibachrome is unique in that tradition. And by understanding and respecting Cibachrome’s characteristics, I can create original handmade prints, one at a time, that have an expressive quality uniquely their own.</p>
+<figure class='center'><div class='single-image'></div><img src='/assets/general/film-on-light-table.jpg' alt='Film originals on light table' title='Film originals on light table'><figcaption>4x5 transparency film placed on my light table for evaluation.</figcaption></div></figure><h3>Film Evaluation</h3><p>For me, the Cibachrome print being at the light table and selecting a well suited image for printing. Cibachrome is a very high contrast paper so it's best to start with transparencies that have relatively low overall contrast. This matches well to my style of photography which conveys intimate scenes in indirect, ambient and reflected light. However, the image that looks best on the light table does not necessarily correspond to the best image for printing. I tend to prefer slightly over-exposed images which I can control with contrast masks but, paradoxically, underexposed low contrast images printed on Cibachrome can actually exhibit increased contrast in the final print.</p>
+<h3>Contrast Masking</h3><p>Within the wet darkroom, controlling the degree of contrast in a print requires contrast masking. Contrast masks are created from black and white transparency film (exposed from the original color transparency) and then sandwiched on top of the original in the negative carrier. Sitting on top the original, the mask balances the density of light passing through the original to reduce contrast when creating the print. In addition, contrast masks provide the benefit of unsharp masking which increases edge contrast across the print, giving it a sharper appearance.</p>
+<figure class='center'><div class='single-image'></div><img src='/assets/general/darkroom-masking-example.jpg' alt='Cibachrome contrast masking example.' title='Cibachrome contrast masking example.'><figcaption>An overall contrast mask for the print, <a href="/photography/zion-national-park/fall/autumn-symphony.html">Autumn Symphony</a>.</figcaption></div></figure>
+<p>Contrast masks are controlled by three primary factors; exposure, development time and filtration. A basic overall contrast mask is created by exposure and development time alone. Exposure controls the mask's density and development time controls the mask's contrast. For even greater control, red, blue, and green filters can be used (separately or combined) to control the density of light on specific colors in your image. Masks can be made across an entire image or controlled to only work in a certain area of an image. Multiple masks can be created and combined to control a combination of overall contrast, specific color contrast, and target area contrast. In short, the possibilities are endless.</p>
+<h3>Exposure and Creative Options</h3><p>Initial test prints focus on determining proper exposure and color mix — there is a critical interplay of light and color when producing Cibachrome, the proper balance of which really makes the print sing. Once this balance is determined the printmaker has a limited set of creative options to further finesse the print. Dodging and/or burning (darkening and lightening) specific areas of the print with cutouts or even your hands is common. Advanced techniques such as flashing or contrast masks can be used to affect local contrast and color densities.</p>
+<h3>Print Processors</h3><p>Once exposed, the paper is processed. Processing machines ranged from the tabletop Cap40 (for prints up to 16 inches wide) all the way up to the Kreonite Processor which could print mural size prints for the small price tag of nearly $50K. Another option was the Jobo tabletop processor - a drum based light-tight system for processing both color and black and white film and prints up to 20 x 24 inches. The nice advantage of the Jobo processor was that it could be used outside the darkroom in the light and was portable enough to run anywhere from the garage to the bathroom with relatively minimal set-up. Jobo processors can still be <a href="http://www.ebay.com/sch/i.html?_from=R40&amp;_trksid=p5197.m570.l1311&amp;_nkw=jobo+processor&amp;_sacat=See-All-Categories">easily found</a> on auction sites like eBay.</p>
+<figure class='center'><div class='single-image'></div><img src='/assets/general/jobo-cpp2-processor-cibachrome.jpg' title='Jobo CPP-2 Processor, Cibachrome (Cibachrome)' alt='Jobo CPP-2 Processor, Cibachrome '><figcaption>The JOBO CPP-2 processor used for producing Cibachrome prints up to 20x24 inches.</figcaption></div></figure><h3>Print Processing</h3><p>Once exposed the print is mounted on the processor and goes through the following processing steps over a period of about 15 minutes:</p><ul class='clist'><li><span>Water pre-soak (30 secs):</span> The print is pre-soaked which helps prevent uneven development in the next step.</li><li><span>Development (3 mins):</span> Cibachrome Developer is a black and white developer which forms the silver compounds (and the image) within the paper's multi-layer dye structure.</li><li><span>Water Rinse (30 secs):</span> Development is halted and rinsed away in preparation for bleach.</li><li><span>Bleach (3 mins):</span> During the bleach cycle, the bleach catalyst is activated proportionately to the amount of silver formed during the development cycle. The dye layers in Cibachrome's paper emulsion are revealed forming the actual image.</li><li><span>Fixer (3 mins):</span> The fixer halts the bleaching process and stabilizes the image.</li><li><span>Water Wash (~5 mins):</span> The print is pulled from the drum and water rinsed which reduces the concentration of any residual chemistry and byproducts ensuring maximum image stability and permanence.</li></ul>
+<h3>Drying the Print</h3><p>Once the print is finished washing, it should be dried as efficiently as possible. Prints can be squeegeed (very carefully) and hung dry with clips or heat dried with a blow dryer. Drying temperature should never exceed 160°F. Even after drying prints should be allowed to cure for 24 hours before being matted or stored.</p>
+<h3>Cibachrome and a Digital Workflow</h3><p>Many photographers who admired the aesthetic quality of Cibachrome were unaware the paper could be used in a digital printing workflow. A scanned or digitally captured image could be printed to Cibachrome utilizing a OCE LightJet or <a href="http://www.zbe.com/products/chromira/chromira30.html">ZBE Chromira</a> digital printer to create a true continuous tone photograph by traditional photochemical means. Unfortunately, Ilford's financial troubles coupled with the rise of inkjet printing limited interest in digitally printed Cibachrome and only a few select labs ever offered the service.</p>
+<h3>Environmental Concerns</h3><p>A common "rub" against Cibachrome with sensitive environmental overtones has been the dye-bleach solution. Highly acidic with a a pH of about 0.7, the bleach can be corrosive to ordinary plumbing materials if disposed of directly through common waste lines and sewers. Fortunately, the current bleach solution can be neutralized with the simple addition of sodium bicarbonate (baking soda) and rendered safe for disposal.</p>
+ 
+  
+          <div id="prevnext">
+            <ul class="piped">
+              <li>Cibachrome: The Rarest Color Photographic Process in the World Today</li>
+              <li><a href="#top" class="scrollToTop"><span class="icon up"></span></a></li>
+              <li><a class="prev" href="/cibachrome/display-and-care.html">Display and Care</a></li>
+              
+            </ul>
+          </div>
+
+	</div>
+</main>
+
+<footer id="footer">
+  <p>
+    Copyright © 2010–2025 by Douglas Vincent : Photographic Arts<br>
+    Permission must be <a href="/contact/">requested to use</a> any content from this site.
+  </p>
+  <p>
+    Your <a href="/contact/">questions</a>, <a href="/contact/">comments</a>, or 
+    <a href="/contact/">inquiries</a> are always welcome.
+  </p>
+</footer>
+
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="/global/scripts/jquery.touchSwipe.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			noBurger = 1024;
+			$('#navToggleMain').change(function() {
+				win = $(window).width();
+				if ($('#navToggleMain').prop("checked") == true) {
+					if (win < noBurger) {
+						$('html').addClass('noscroll');
+						//$('#nav').addClass('open');
+						$('#top').addClass('open');
+						$('#grilled-cheese').addClass('open');
+					} else {
+						$('#navToggleMain').prop("checked", false);
+					}
+				}
+				else if($('#navToggleMain').prop("checked") == false) {
+					if (win < noBurger) {
+						$('html').removeClass('noscroll');
+						//$('#nav').removeClass('open');
+						$('#top').removeClass('open');
+						$('#grilled-cheese').removeClass('open');
+					} else {
+						$('#navToggleMain').prop("checked", true);
+					}
+				}
+			});
+	
+			$('#nav input[type=checkbox]').change(function() {
+				win = $(window).width();
+				className = $(this).attr('class');
+				if($(this).prop("checked") == true) {
+					if (win < noBurger) {
+						console.log("Checkbox is checked.");
+						$('.'+className+' h3').addClass('open');
+						$('#'+className).addClass('open');
+					} else {
+						console.log("Checkbox is unchecked.");
+						$(this).prop("checked", false);
+					}
+				}
+				else if($(this).prop("checked") == false) {
+					if (win < noBurger) {
+						console.log("Checkbox is unchecked.");
+						$('.'+className+' h3').removeClass('open');
+						$('#'+className).removeClass('open');
+					} else {
+						console.log("Checkbox is checked.");
+						$(this).prop("checked", true);
+					}
+				}
+			});
+		});
+	</script>
+
+	<script src="/global/scripts/general.js"></script>
+	<script src="/global/scripts/sizing.js"></script>
+	<script src="/global/scripts/photo.js"></script>
+
 </body>
 </html>
