--- a/public/portfolios/icons-of-agriculture/wall-street-dufur.html
+++ b/public/portfolios/icons-of-agriculture/wall-street-dufur.html
@@ -121,7 +121,7 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="granary-detail-dufur.html">❮❮</a>
+			  <a class="button gallery prev" href="granary-ladder-dufur.html">❮❮</a>
               <a class="button gallery next" href="holding-silos-horace.html">❯❯</a>
             </p>
             <div class="image-nav">
@@ -147,7 +147,7 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="granary-detail-dufur.html">❮❮</a>
+					    <a class="button gallery prev" href="granary-ladder-dufur.html">❮❮</a>
               <a class="button gallery next" href="holding-silos-horace.html">❯❯</a>
             </p>
  
