--- a/public/portfolios/icons-of-agriculture-iv/ventilation-palouse-city.html
+++ b/public/portfolios/icons-of-agriculture-iv/ventilation-palouse-city.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Irrigation Pipes on Truck - Douglas Vincent Photographic Arts</title>
+    <title>Ventilation - Douglas Vincent Photographic Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin-when-cross-origin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen">
   </head>
-  <body id="Irrigation Pipes on Truck">
+  <body id="Ventilation">
     
     <div id="top">
   <div id="top-inner">
@@ -114,15 +114,15 @@
       <div class="row">
         <div class="p-main" id="resize">
           <div class="sizing">
-            <img src="/assets/photographs/irrigation-pipes-on-truck-williams.jpg" alt="Irrigation Pipes on Truck" class="photograph photo1 current" data-width="2400" data-height="1600"/>
-            <img src="/assets/photographs/irrigation-pipes-on-truck-williams-home.jpg" alt="Irrigation Pipes on Truck" class="photograph photo2" data-width="2400" data-height="1600"/>
-            <img src="/assets/photographs/irrigation-pipes-on-truck-williams-biz.jpg" alt="Irrigation Pipes on Truck" class="photograph photo3" data-width="2400" data-height="1600"/>
+            <img src="/assets/photographs/ventilation-palouse-city.jpg" alt="Ventilation" class="photograph photo1 current" data-width="2400" data-height="1720"/>
+            <img src="/assets/photographs/ventilation-palouse-city-home.jpg" alt="Ventilation" class="photograph photo2" data-width="2400" data-height="1720"/>
+            <img src="/assets/photographs/ventilation-palouse-city-biz.jpg" alt="Ventilation" class="photograph photo3" data-width="2400" data-height="1720"/>
           </div>
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="ventilation-palouse-city.html">❮❮</a>
-              <a class="button gallery next" href="stacked-pipes-winters.html">❯❯</a>
+			  <a class="button gallery prev" href="granary-detail-ione.html">❮❮</a>
+              <a class="button gallery next" href="irrigation-pipes-on-truck-williams.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -136,9 +136,9 @@
 	</div>
 		 <div class="p-side">
           <div class="photo-details">
-            <h2 id="title">Irrigation Pipes on Truck</h2>
-            <p class="location">Williams</p>
-            <p class="place">Sacramento Valley, 2014</p>
+            <h2 id="title">Ventilation</h2>
+            <p class="location">Palouse City</p>
+            <p class="place">Whitman County, 2022</p>
             <p><a href="#">Print Type</a>: Pigment Ink</p>
             <p><a href="#">Edition Type</a>: Limited</p>
 
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="ventilation-palouse-city.html">❮❮</a>
-              <a class="button gallery next" href="stacked-pipes-winters.html">❯❯</a>
+					    <a class="button gallery prev" href="granary-detail-ione.html">❮❮</a>
+              <a class="button gallery next" href="irrigation-pipes-on-truck-williams.html">❯❯</a>
             </p>
  
 
