--- a/public/portfolios/icons-of-agriculture-ii/fractures-chulalar.html
+++ b/public/portfolios/icons-of-agriculture-ii/fractures-chulalar.html
@@ -122,7 +122,7 @@
           <div class="photoNav">
             <p id="photoNavM" class="nav">
 			  <a class="button gallery prev" href="details-cheyenne.html">❮❮</a>
-              <a class="button gallery next" href="air-pipes-chandon.html">❯❯</a>
+              <a class="button gallery next" href="air-pipes-condon.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="details-cheyenne.html">❮❮</a>
-              <a class="button gallery next" href="air-pipes-chandon.html">❯❯</a>
+              <a class="button gallery next" href="air-pipes-condon.html">❯❯</a>
             </p>
  
 
