--- a/public/portfolios/icons-of-agriculture-ii/granary-detail-cortena.html
+++ b/public/portfolios/icons-of-agriculture-ii/granary-detail-cortena.html
@@ -121,7 +121,7 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="air-pipes-chandon.html">❮❮</a>
+			  <a class="button gallery prev" href="air-pipes-condon.html">❮❮</a>
               <a class="button gallery next" href="stacks-and-ladder-cortena.html">❯❯</a>
             </p>
             <div class="image-nav">
@@ -147,7 +147,7 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="air-pipes-chandon.html">❮❮</a>
+					    <a class="button gallery prev" href="air-pipes-condon.html">❮❮</a>
               <a class="button gallery next" href="stacks-and-ladder-cortena.html">❯❯</a>
             </p>
  
