--- a/public/portfolios/icons-of-agriculture-iv/granary-detail-ione.html
+++ b/public/portfolios/icons-of-agriculture-iv/granary-detail-ione.html
@@ -122,7 +122,7 @@
           <div class="photoNav">
             <p id="photoNavM" class="nav">
 			  <a class="button gallery prev" href="granary-detail-ii-cortena.html">❮❮</a>
-              <a class="button gallery next" href="ventilation-palouse.html">❯❯</a>
+              <a class="button gallery next" href="ventilation-palouse-city.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="granary-detail-ii-cortena.html">❮❮</a>
-              <a class="button gallery next" href="ventilation-palouse.html">❯❯</a>
+              <a class="button gallery next" href="ventilation-palouse-city.html">❯❯</a>
             </p>
  
 
