--- a/public/index.html
+++ b/public/index.html
@@ -168,13 +168,13 @@
   
 
     <div class="hero-item">
-      <a href="/portfolios/icons-of-agriculture-ii/granary-and-moon-walters.html">
+      <a href="/portfolios/icons-of-agriculture-iii/granary-and-moon-walters.html">
         <img src="/assets/photographs/granary-and-moon-walters.jpg" alt="Granary and Moon">
       </a>
       <h3>Granary and Moon</h3>
       <h4>Walters Road, Garfield</h4>
       <p class="collection">
-        Part of the <a href="/portfolios/icons-of-agriculture-ii/">Icons of Agriculture</a> collection.
+        Part of the <a href="/portfolios/icons-of-agriculture-iii/">Icons of Agriculture</a> collection.
       </p>
       <p><a href="/portfolios" class="more">View All Photographs »</a></p>
     </div>
@@ -227,6 +227,19 @@
       <h4>Clear Creek, Zion National Park</h4>
       <p class="collection">
         Part of the <a href="/portfolios/zion-national-park-ancient-sands/">Zion National Park</a> collection.
+      </p>
+      <p><a href="/portfolios" class="more">View All Photographs »</a></p>
+    </div>
+  
+
+    <div class="hero-item">
+      <a href="/portfolios/zion-national-park-autumn-ii/trees-of-life-ii-zion-national-park.html">
+        <img src="/assets/photographs/trees-of-life-ii-zion-national-park.jpg" alt="Tree of Life II">
+      </a>
+      <h3>Tree of Life II</h3>
+      <h4>Taylor Creek South, Kolob Canyons</h4>
+      <p class="collection">
+        Part of the <a href="/portfolios/zion-national-park-autumn-ii/">Zion National Park</a> collection.
       </p>
       <p><a href="/portfolios" class="more">View All Photographs »</a></p>
     </div>
