--- a/public/portfolios/icons-of-agriculture-ii/index.html
+++ b/public/portfolios/icons-of-agriculture-ii/index.html
@@ -117,9 +117,9 @@
       <div id="thumbs">
         
       <div class="thumb">
-        <a href="/portfolios/icons-of-agriculture-ii/granary-and-moon-walters.html">
-          <img src="/assets/photographs/thumbs/granary-and-moon-walters.jpg" alt="Granary and Moon">
-          <h4>Granary and Moon</h4>
+        <a href="/portfolios/icons-of-agriculture-ii/red-coupler-palouse.html">
+          <img src="/assets/photographs/thumbs/red-coupler-palouse.jpg" alt="Red Coupler">
+          <h4>Red Coupler</h4>
         </a>
       </div>
     
