--- a/public/portfolios/icons-of-agriculture-iv/irrigation-pipes-on-truck-williams.html
+++ b/public/portfolios/icons-of-agriculture-iv/irrigation-pipes-on-truck-williams.html
@@ -122,7 +122,7 @@
           <div class="photoNav">
             <p id="photoNavM" class="nav">
 			  <a class="button gallery prev" href="ventilation-palouse-city.html">❮❮</a>
-              <a class="button gallery next" href="stacked-pipes-winters.html">❯❯</a>
+              <a class="button gallery next" href="emptiness-washtucna.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="ventilation-palouse-city.html">❮❮</a>
-              <a class="button gallery next" href="stacked-pipes-winters.html">❯❯</a>
+              <a class="button gallery next" href="emptiness-washtucna.html">❯❯</a>
             </p>
  
 
