--- a/public/portfolios/icons-of-agriculture-iv/stairs-cheney.html
+++ b/public/portfolios/icons-of-agriculture-iv/stairs-cheney.html
@@ -121,8 +121,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  
-              <a class="button gallery next" href="cement-silos-condon.html">❯❯</a>
+			  <a class="button gallery prev" href="ramshackle-granary-winona.html">❮❮</a>
+              <a class="button gallery next" href="stacked-pipes-winters.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    
-              <a class="button gallery next" href="cement-silos-condon.html">❯❯</a>
+					    <a class="button gallery prev" href="ramshackle-granary-winona.html">❮❮</a>
+              <a class="button gallery next" href="stacked-pipes-winters.html">❯❯</a>
             </p>
  
 
