--- a/public/portfolios/icons-of-agriculture-iv/ramshackle-granary-winona.html
+++ b/public/portfolios/icons-of-agriculture-iv/ramshackle-granary-winona.html
@@ -121,8 +121,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="emptiness-washtucna.html">❮❮</a>
-              <a class="button gallery next" href="silos-reflected-willows.html">❯❯</a>
+			  
+              <a class="button gallery next" href="stairs-cheney.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="emptiness-washtucna.html">❮❮</a>
-              <a class="button gallery next" href="silos-reflected-willows.html">❯❯</a>
+					    
+              <a class="button gallery next" href="stairs-cheney.html">❯❯</a>
             </p>
  
 
