--- a/public/portfolios/icons-of-agriculture-iv/silos-reflected-willows.html
+++ b/public/portfolios/icons-of-agriculture-iv/silos-reflected-willows.html
@@ -121,7 +121,7 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="ramshackle-granary-winona.html">❮❮</a>
+			  <a class="button gallery prev" href="emptiness-washtucna.html">❮❮</a>
               <a class="button gallery next" href="glowing-silos-willows.html">❯❯</a>
             </p>
             <div class="image-nav">
@@ -147,7 +147,7 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="ramshackle-granary-winona.html">❮❮</a>
+					    <a class="button gallery prev" href="emptiness-washtucna.html">❮❮</a>
               <a class="button gallery next" href="glowing-silos-willows.html">❯❯</a>
             </p>
  
