--- a/public/portfolios/icons-of-agriculture-iv/stacked-pipes-winters.html
+++ b/public/portfolios/icons-of-agriculture-iv/stacked-pipes-winters.html
@@ -121,8 +121,8 @@
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="irrigation-pipes-on-truck-williams.html">❮❮</a>
-              <a class="button gallery next" href="emptiness-washtucna.html">❯❯</a>
+			  <a class="button gallery prev" href="stairs-cheney.html">❮❮</a>
+              <a class="button gallery next" href="cement-silos-condon.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="irrigation-pipes-on-truck-williams.html">❮❮</a>
-              <a class="button gallery next" href="emptiness-washtucna.html">❯❯</a>
+					    <a class="button gallery prev" href="stairs-cheney.html">❮❮</a>
+              <a class="button gallery next" href="cement-silos-condon.html">❯❯</a>
             </p>
  
 
