--- a/public/portfolios/zion-national-park-ancient-sands/concretions-zion-national-park.html
+++ b/public/portfolios/zion-national-park-ancient-sands/concretions-zion-national-park.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Etchings - Douglas Vincent Photographic Arts</title>
+    <title>Concretions - Douglas Vincent Photographic Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin-when-cross-origin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
     <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen">
   </head>
-  <body id="Etchings">
+  <body id="Concretions">
     
     <div id="top">
   <div id="top-inner">
@@ -114,15 +114,15 @@
       <div class="row">
         <div class="p-main" id="resize">
           <div class="sizing">
-            <img src="/assets/photographs/etchings-zion-national-park.jpg" alt="Etchings" class="photograph photo1 current" data-width="1200" data-height="1600"/>
-            <img src="/assets/photographs/etchings-zion-national-park-home.jpg" alt="Etchings" class="photograph photo2" data-width="1200" data-height="1600"/>
-            <img src="/assets/photographs/etchings-zion-national-park-biz.jpg" alt="Etchings" class="photograph photo3" data-width="1200" data-height="1600"/>
+            <img src="/assets/photographs/concretions-zion-national-park.jpg" alt="Concretions" class="photograph photo1 current" data-width="1280" data-height="1600"/>
+            <img src="/assets/photographs/concretions-zion-national-park-home.jpg" alt="Concretions" class="photograph photo2" data-width="1280" data-height="1600"/>
+            <img src="/assets/photographs/concretions-zion-national-park-biz.jpg" alt="Concretions" class="photograph photo3" data-width="1280" data-height="1600"/>
           </div>
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
-			  <a class="button gallery prev" href="echoes-of-time-zion-national-park.html">❮❮</a>
-              <a class="button gallery next" href="concretions-zion-national-park.html">❯❯</a>
+			  <a class="button gallery prev" href="etchings-zion-national-park.html">❮❮</a>
+              <a class="button gallery next" href="two-ply-zion-national-park.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -136,10 +136,10 @@
 	</div>
 		 <div class="p-side">
           <div class="photo-details">
-            <h2 id="title">Etchings</h2>
-            <p class="location">Tunnel View</p>
-            <p class="place">Zion National Park, 2014</p>
-            <p><a href="#">Print Type</a>: Pigment Ink</p>
+            <h2 id="title">Concretions</h2>
+            <p class="location">Center of the Universe</p>
+            <p class="place">Zion National Park, 2013</p>
+            <p><a href="#">Print Type</a>: Handmade Cibachrome</p>
             <p><a href="#">Edition Type</a>: Limited</p>
 
             <p class="inquire">
@@ -147,8 +147,8 @@
             </p>
 
            <p id="photoNavD" class="nav">
-					    <a class="button gallery prev" href="echoes-of-time-zion-national-park.html">❮❮</a>
-              <a class="button gallery next" href="concretions-zion-national-park.html">❯❯</a>
+					    <a class="button gallery prev" href="etchings-zion-national-park.html">❮❮</a>
+              <a class="button gallery next" href="two-ply-zion-national-park.html">❯❯</a>
             </p>
  
 
