--- a/public/portfolios/zion-national-park-watercourse-way/reflections-08-zion-national-park.html
+++ b/public/portfolios/zion-national-park-watercourse-way/reflections-08-zion-national-park.html
@@ -114,15 +114,15 @@
       <div class="row">
         <div class="p-main" id="resize">
           <div class="sizing">
-            <img src="/assets/photographs/reflections-08-zion-national-park.jpg" alt="Reflections #8" class="photograph photo1 current" data-width="2400" data-height="1600"/>
-            <img src="/assets/photographs/reflections-08-zion-national-park-home.jpg" alt="Reflections #8" class="photograph photo2" data-width="2400" data-height="1600"/>
-            <img src="/assets/photographs/reflections-08-zion-national-park-biz.jpg" alt="Reflections #8" class="photograph photo3" data-width="2400" data-height="1600"/>
+            <img src="/assets/photographs/reflections-08-zion-national-park.jpg" alt="Reflections #8" class="photograph photo1 current" data-width="2400" data-height="1720"/>
+            <img src="/assets/photographs/reflections-08-zion-national-park-home.jpg" alt="Reflections #8" class="photograph photo2" data-width="2400" data-height="1720"/>
+            <img src="/assets/photographs/reflections-08-zion-national-park-biz.jpg" alt="Reflections #8" class="photograph photo3" data-width="2400" data-height="1720"/>
           </div>
 
           <div class="photoNav">
             <p id="photoNavM" class="nav">
 			  <a class="button gallery prev" href="reflections-07-zion-national-park.html">❮❮</a>
-              
+              <a class="button gallery next" href="reflections-24-zion-national-park.html">❯❯</a>
             </p>
             <div class="image-nav">
               <ul>
@@ -148,7 +148,7 @@
 
            <p id="photoNavD" class="nav">
 					    <a class="button gallery prev" href="reflections-07-zion-national-park.html">❮❮</a>
-              
+              <a class="button gallery next" href="reflections-24-zion-national-park.html">❯❯</a>
             </p>
  
 
