--- a/public/portfolios/new-work/granary-gothenburg.html
+++ b/public/portfolios/new-work/granary-gothenburg.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+  <head>
     <meta charset="utf-8">
-    <title>Portfolios - Douglas Vincent Photographic Arts</title>
+    <title>Granary - Douglas Vincent Photographic Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="origin-when-cross-origin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Douglas Vincent, Photographic Art, Photography, Fine Art Photography, Pigment Ink Prints, Cibachrome, Ilfochrome, Portfolio">
+    <meta name="keywords" content="Douglas Vincent, Photographic Art, Photography, Fine Art Photography, Pigment Ink Prints, Large Format Photography, Analog Photography, Film Photography, Film, Cibachrome, Ilfochrome">
     <meta name="author" content="Douglas Vincent | Photographic Arts">
     <meta http-equiv="Expires" content="30">
-    <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
-    <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen"></head>
-<body id="portfolios">
-  <div id="top">
+     <link rel="stylesheet" href="https://use.typekit.net/avc4wei.css">
+    <link href="/css/style.css?v={{ now|date('n.j.y.G.i.s') }}" rel="stylesheet" type="text/css" media="screen">
+  </head>
+  <body id="Granary">
+    
+    <div id="top">
   <div id="top-inner">
     <header id="header">
       <input type="checkbox" id="navToggleMain">
@@ -108,122 +110,55 @@
   </div>
 </div>
 
-  <main id="main" class="section">
-    <h1>Portfolios</h1>
-    <div class="port-intro">
-      <p></p>
-    </div>
-    <div class="row">
-      <div id="thumbs">
-        
-    <div class="thumb">
-      <a href="/portfolios/zion-national-park/">
-        <img src="/assets/photographs/thumbs/canyon-light-zion-national-park.jpg" alt="Zion National Park">
-        <h4>Zion National Park</h4>
-      </a>
-    </div>
-  
+    <main id="main" class="detail">
+      <div class="row">
+        <div class="p-main" id="resize">
+          <div class="sizing">
+            <img src="/assets/photographs/granary-gothenburg.jpg" alt="Granary" class="photograph photo1 current" data-width="1200" data-height="1600"/>
+            <img src="/assets/photographs/granary-gothenburg-home.jpg" alt="Granary" class="photograph photo2" data-width="1200" data-height="1600"/>
+            <img src="/assets/photographs/granary-gothenburg-biz.jpg" alt="Granary" class="photograph photo3" data-width="1200" data-height="1600"/>
+          </div>
 
-    <div class="thumb">
-      <a href="/portfolios/zion-national-park-autumn/">
-        <img src="/assets/photographs/thumbs/maple-canopy-zion-national-park.jpg" alt="Zion National Park - Autumn">
-        <h4>Zion National Park - Autumn</h4>
-      </a>
-    </div>
-  
+          <div class="photoNav">
+            <p id="photoNavM" class="nav">
+			  <a class="button gallery prev" href="dryer-ensign.html">❮❮</a>
+              <a class="button gallery next" href="power-lines-rozel.html">❯❯</a>
+            </p>
+            <div class="image-nav">
+              <ul>
+                <li><a class="button gallery trigger selected" id="photo1" href="#1">1</a></li>
+                <li><a class="button gallery trigger" id="photo2" href="#2">2</a></li>
+                <li><a class="button gallery trigger" id="photo3" href="#3">3</a></li>
+              </ul>
+            </div>
+          </div>
 
-    <div class="thumb">
-      <a href="/portfolios/zion-national-park-autumn-ii/">
-        <img src="/assets/photographs/thumbs/leaves-water-stone-zion-national-park.jpg" alt="Zion National Park - Autumn II">
-        <h4>Zion National Park - Autumn II</h4>
-      </a>
-    </div>
-  
+	</div>
+		 <div class="p-side">
+          <div class="photo-details">
+            <h2 id="title">Granary</h2>
+            <p class="location">Gothenburg, </p>
+            <p class="place">Kansas, 2025</p>
+            <p><a href="#">Print Type</a>: Pigment Ink</p>
+            <p><a href="#">Edition Type</a>: Limited</p>
 
-    <div class="thumb">
-      <a href="/portfolios/zion-national-park-ancient-sands/">
-        <img src="/assets/photographs/thumbs/pink-tapestry-zion-national-park.jpg" alt="Zion National Park - Ancient Sands">
-        <h4>Zion National Park - Ancient Sands</h4>
-      </a>
-    </div>
-  
+            <p class="inquire">
+              <a class="button gallery inquire" href="/inquiries/print/">INQUIRIES ❯❯</a>
+            </p>
 
-    <div class="thumb">
-      <a href="/portfolios/zion-national-park-watercourse-way/">
-        <img src="/assets/photographs/thumbs/reflections-subway-zion-national-park.jpg" alt="Zion National Park - Watercourse Way">
-        <h4>Zion National Park - Watercourse Way</h4>
-      </a>
-    </div>
-  
+           <p id="photoNavD" class="nav">
+					    <a class="button gallery prev" href="dryer-ensign.html">❮❮</a>
+              <a class="button gallery next" href="power-lines-rozel.html">❯❯</a>
+            </p>
+ 
 
-    <div class="thumb">
-      <a href="/portfolios/icons-of-agriculture/">
-        <img src="/assets/photographs/thumbs/clearing-storm-the-palouse.jpg" alt="Icons of Agriculture">
-        <h4>Icons of Agriculture</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/icons-of-agriculture-ii/">
-        <img src="/assets/photographs/thumbs/red-coupler-palouse.jpg" alt="Icons of Agriculture II">
-        <h4>Icons of Agriculture II</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/icons-of-agriculture-iii/">
-        <img src="/assets/photographs/thumbs/granary-and-moon-walters.jpg" alt="Icons of Agriculture III">
-        <h4>Icons of Agriculture III</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/icons-of-agriculture-iv/">
-        <img src="/assets/photographs/thumbs/ramshackle-granary-winona.jpg" alt="Icons of Agriculture IV">
-        <h4>Icons of Agriculture IV</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/cloud-light/">
-        <img src="/assets/photographs/thumbs/ending-storm-steens-wilderness.jpg" alt="Cloud Light">
-        <h4>Cloud Light</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/new-work/">
-        <img src="/assets/photographs/thumbs/dryer-ensign.jpg" alt="New Work">
-        <h4>New Work</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/the-american-west/">
-        <img src="/assets/photographs/thumbs/morning-light-monument-valley.jpg" alt="The American West">
-        <h4>The American West</h4>
-      </a>
-    </div>
-  
-
-    <div class="thumb">
-      <a href="/portfolios/the-american-west-ii/">
-        <img src="/assets/photographs/thumbs/clearing-storm-steens-junction.jpg" alt="The American West II">
-        <h4>The American West II</h4>
-      </a>
-    </div>
-  
+            <p>Read the <a href="/This is a field note.">field notes</a> for this photograph.</p>
+          </div>
+        </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <footer id="footer">
+    <footer id="footer">
   <p>
     Copyright © 2010–2025 by Douglas Vincent : Photographic Arts<br>
     Permission must be <a href="/contact/">requested to use</a> any content from this site.
@@ -293,6 +228,7 @@
 	<script src="/global/scripts/general.js"></script>
 	<script src="/global/scripts/sizing.js"></script>
 	<script src="/global/scripts/photo.js"></script>
+
 
 </body>
 </html>
