--- a/public/portfolios/new-work/dryer-ensign.html
+++ b/public/portfolios/new-work/dryer-ensign.html
@@ -137,7 +137,7 @@
 		 <div class="p-side">
           <div class="photo-details">
             <h2 id="title">Dryer</h2>
-            <p class="location">Ensign, </p>
+            <p class="location">Ensign, Gray County</p>
             <p class="place">Nebraska, 2025</p>
             <p><a href="#">Print Type</a>: Pigment Ink</p>
             <p><a href="#">Edition Type</a>: Limited</p>
