--- a/public/portfolios/new-work/granary-gothenburg.html
+++ b/public/portfolios/new-work/granary-gothenburg.html
@@ -137,7 +137,7 @@
 		 <div class="p-side">
           <div class="photo-details">
             <h2 id="title">Granary</h2>
-            <p class="location">Gothenburg, </p>
+            <p class="location">Gothenburg, Dawson County</p>
             <p class="place">Kansas, 2025</p>
             <p><a href="#">Print Type</a>: Pigment Ink</p>
             <p><a href="#">Edition Type</a>: Limited</p>
