--- a/public/portfolios/new-work/index.html
+++ b/public/portfolios/new-work/index.html
@@ -111,7 +111,7 @@
   <main id="main" class="section">
     <h1>New Work</h1>
     <div class="port-intro">
-      <p>New work from 2025 adventures across the midwest.</p>
+      <p>New work from the fall of 2025 exploring backroads and farming towns throughout Washington, Nebraska, Kansas, and Colorado.</p>
     </div>
     <div class="row">
       <div id="thumbs">
