--- a/public/portfolios/new-work/power-lines-rozel.html
+++ b/public/portfolios/new-work/power-lines-rozel.html
@@ -137,7 +137,7 @@
 		 <div class="p-side">
           <div class="photo-details">
             <h2 id="title">Power Lines</h2>
-            <p class="location">Rozel, </p>
+            <p class="location">Rozel, Pawnee County</p>
             <p class="place">Kansas, 2025</p>
             <p><a href="#">Print Type</a>: Pigment Ink</p>
             <p><a href="#">Edition Type</a>: Limited</p>
